resolve #140, fix section header z-index

--- a/src/components/Draft/controls/Section.module.styl
+++ b/src/components/Draft/controls/Section.module.styl
@@ -19,7 +19,7 @@
   box-shadow: light-shadow
 
   cursor pointer
-  z-index 0
+  z-index 1
 
 .content
   box-sizing: border-box;
